# Hook

./: .travis.yml  CMakeLists.txt  README.md  log.h  logger.cpp  readme
hook/: config.h  log.cc  logger.cc  singleton.h  util.cc  util.h
tests/: test.cc
